--- a/lineupscode.html
+++ b/lineupscode.html
@@ -16,15 +16,6 @@ canvas {
     margin: 60px auto 0 auto;
     border: 1px solid #000;
 }
-/* Tema seçimi simgeleri */
-.theme-toggle {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-    font-size: 30px;
-    cursor: pointer;
-    z-index: 15;
-}
 /* Ayarlar butonu */
 .settings {
     position: fixed;
@@ -84,9 +75,8 @@ canvas {
 </style>
 </head>
 <body>
-<!-- Ayarlar ve Tema -->
+<!-- Ayarlar -->
 <div class="settings" id="settings">☰</div>
-<div class="theme-toggle" id="themeToggle">🌙</div>
 
 <!-- Canvas Mini Map -->
 <canvas id="gameCanvas"></canvas>
@@ -99,7 +89,7 @@ canvas {
 <!-- Tutorial -->
 <div class="tutorial" id="tutorial">
     <h2>Nasıl Oynanır?</h2>
-    <p>Mini mapte kırmızı alanlara tıklayın. Video yoksa "Yakında Gelecek 🚀" göreceksiniz.</p>
+    <p>Mini mapte kırmızı noktaları tıklayın. Video yoksa "Yakında Gelecek 🚀" göreceksiniz.</p>
     <p>Sol üstten ayarlara girip tema değiştirebilirsiniz.</p>
     <p>Hata bulursanız "Hata Bildir" butonuna basabilirsiniz.</p>
     <button id="closeTutorial">Tamam</button>
@@ -123,16 +113,6 @@ const tutorial = document.getElementById('tutorial');
 const closeTutorial = document.getElementById('closeTutorial');
 tutorial.style.display = 'block';
 closeTutorial.addEventListener('click', () => tutorial.style.display = 'none');
-
-// Tema
-const themeToggle = document.getElementById('themeToggle');
-let isDarkTheme = false;
-themeToggle.addEventListener('click', () => {
-    isDarkTheme = !isDarkTheme;
-    document.body.style.backgroundColor = isDarkTheme ? '#222' : '#fff';
-    document.body.style.color = isDarkTheme ? '#fff' : '#000';
-    themeToggle.textContent = isDarkTheme ? '🌞' : '🌙';
-});
 
 // Canvas ve responsive
 const canvas = document.getElementById('gameCanvas');
@@ -159,18 +139,44 @@ const map2 = [
     { x: 500, y: 350, width: 50, height: 50, videoUrl: '' }
 ];
 
+// Zigzag noktası
+const zigzagSpot = { x: 300, y: 200, radius: 10, videoUrl: '' };
+
 let currentMap = map1;
 
 // Harita çizimi
 function drawMap(mapSpots) {
     ctx.clearRect(0,0,canvas.width,canvas.height);
+
     if(miniMapImg.complete) {
         ctx.drawImage(miniMapImg, 0, 0, canvas.width, canvas.height);
     }
+
+    // Noktalar
     mapSpots.forEach(spot => {
+        ctx.beginPath();
+        ctx.arc(spot.x + spot.width/2, spot.y + spot.height/2, 10, 0, Math.PI*2);
         ctx.fillStyle = 'red';
-        ctx.fillRect(spot.x, spot.y, spot.width, spot.height);
+        ctx.fill();
     });
+
+    // Zigzag noktası
+    ctx.beginPath();
+    ctx.arc(zigzagSpot.x, zigzagSpot.y, zigzagSpot.radius, 0, Math.PI*2);
+    ctx.fillStyle = 'red';
+    ctx.fill();
+
+    // Reklam
+    drawAds();
+}
+
+// Reklam çizimi
+function drawAds() {
+    ctx.fillStyle = 'rgba(255,255,0,0.6)';
+    ctx.fillRect(canvas.width - 110, 10, 100, 50);
+    ctx.fillStyle = '#000';
+    ctx.font = '14px Arial';
+    ctx.fillText('REKLAM', canvas.width - 75, 40);
 }
 
 miniMapImg.onload = () => drawMap(currentMap);
@@ -192,12 +198,20 @@ videoContainer.addEventListener('click', () => {
 canvas.addEventListener('click', (e) => {
     const mouseX = e.offsetX;
     const mouseY = e.offsetY;
+
     currentMap.forEach(spot => {
         if(mouseX >= spot.x && mouseX <= spot.x + spot.width &&
            mouseY >= spot.y && mouseY <= spot.y + spot.height) {
                openVideo(spot.videoUrl);
         }
     });
+
+    // Zigzag noktası tıklama
+    const dx = mouseX - zigzagSpot.x;
+    const dy = mouseY - zigzagSpot.y;
+    if(Math.sqrt(dx*dx + dy*dy) <= zigzagSpot.radius) {
+        openVideo(zigzagSpot.videoUrl);
+    }
 });
 
 // Ayarlar
